Added Lock/Unlock functionality

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,8 +1,9 @@
 @import "../node_modules/gridstack/dist/gridstack.min.css";
-@import './gridstack-24-cols.css';
-@import './switch.css';
+@import "./gridstack-24-cols.css";
+@import "./switch.css";
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 /* This file is for your main application CSS */
+
