--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,3 +8,7 @@
 @import "tailwindcss/utilities";
 /* This file is for your main application CSS */
 
+
+.ui-resizable-autohide > div {
+    background-color: rgba(0, 0 ,0, 0.02);
+}
