Completed sqlite migration

--- a/assets/css/switch.css
+++ b/assets/css/switch.css
@@ -39,12 +39,13 @@
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #16a34a;
   }
   
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+  /* input:focus + .slider {
+    box-shadow: 0 0 1px #16a34a; 
   }
+  */
   
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
